# saxo-bot

./: .env.sample  .gitignore  .ruff.toml  CHANGELOG.md  README.md  calendar.yml  conftest.py  pyproject.toml
.github/workflows/: ci.yml  rotate-refresh-token.yml  sim_canary.yml
ci/: sim_canary.yml
docker/: docker-compose.live.yml  docker-compose.sim.yml  prometheus.yml
docker/mock/: saxo-openapi.yaml  saxo.yml
docs/: Secrets.md  WBS.md  clarification_questions.md  phase_plan.md  spec_diff_checklist.md  test_matrix.csv
reports/: .gitkeep  canary_main_20250519_062813.json  canary_main_20250519_064948.json  canary_main_20250519_093804.json  canary_micro-rev_20250519_062813.json  canary_micro-rev_20250519_064948.json  canary_micro-rev_20250519_093804.json  prometheus_metrics_20250519_062813.json  prometheus_metrics_20250519_064948.json  prometheus_metrics_20250519_093804.json  saxo_trader_go_sanitized.html
scripts/: capture_saxo_trader_go.py  capture_saxo_trader_go_selenium.py  check_token_validity.py  export_prometheus_metrics.py  generate_artifacts.py  generate_canary_report.py  generate_mock_artifacts.py  generate_trade_report.py  get_prometheus_metrics.py  modified_run_canary_test.py  oneclick_start.sh  rotate_token.py  run_canary_test.py  run_canary_test_with_args.py  run_phase4.sh  sanitize_html.py  sanitize_screenshot.py  verify_monitoring.py
src/common/: __init__.py  exceptions.py  http_utils.py  retry_utils.py
src/core/: __init__.py  client.py  saxo_client.py  slippage_guard.py
src/services/: __init__.py
src/utils/: __init__.py  uic_map.py  units_converter.py
tests/: conftest.py
tests/common/: test_exceptions.py  test_http_utils.py  (+1 more)
(+35 files in other folders)
