[tool.poetry]
name = "saxo-bot"
version = "0.1.0"
description = "Automated trading system for Saxo Bank"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
aiohttp = "^3.9.1"
websockets = "^12.0"
pydantic = "^2.5.2"
prometheus-client = "^0.19.0"
pyyaml = "^6.0.1"
mlflow = "^2.10.0"
boto3 = "^1.34.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.1.0"
catboost = "^1.2.0"
xgboost = "^2.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
types-requests = "^2.31.0.2"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "A"]
extend-select = ["S"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term --cov-report=xml --cov-branch"
